@@ -2417,6 +2417,17 @@
       </component>
     </version>
   </module>
+  <module name="vino">
+    <version release="gnome-2.8">
+      <component name="vino" dir="vino" group="extras">
+        <podir dir="po"/>
+        <potname name="vino.pot"/>
+        <branch name="HEAD"/>
+        <regenerate/>
+        <download/>
+      </component>
+    </version>
+  </module>
   <module name="vte">
     <version release="gnome-2.6">
       <component name="vte" dir="vte" group="desktop">
