@@ -1,5 +1,9 @@
 2004-05-27  Christian Rose  <menthos@menthos.com>
 
+	* translation-status.xml: Added vino.
+
+2004-05-27  Christian Rose  <menthos@menthos.com>
+
 	* translation-status.xml: Added orca.
 
 2004-05-19  Christian Rose  <menthos@menthos.com>
